package it.petrinet.petrinet.view;

public class PetriNetViewerPane extends AbstractPetriNetPane{
}
